upgrade `react-native` to 0.73.4
fixes #18291

Changes worth mentioning are :
- More hacks/patches
- Force app to use `Java 17` everywhere to compile `kotlin,java`
- `gems` were upgraded after a long time
- `aapt2` was bumped to `8.1.1`
- `metro` is now at `0.80.4`
- `xcbeautify` was bumped to `1.4.0`
- `@react-native-community/clipboard` lib was replaced with `@react-native-clipboard/clipboard`
- `react-native-dialogs` lib was upgraded to `1.1.2`
- `react-native-gesture-handler` lib was upgraded to `2.14.1`
- `react-native-navigation` was upgraded to `7.37.2`

- Android
- iOS

every other iOS build locally with `make run-ios` would fail with this error message :

```
[React-RCTFabric] Compiling RCTThirdPartyFabricComponentsProvider.mm
❌ error: Build input file cannot be found: '/Users/siddarthkumar/code/experiments/status-mobile/
node_modules/react-native/React/Fabric/RCTThirdPartyFabricComponentsProvider.mm'.
Did you forget to declare this file as an output of a script phase or custom build rule which
produces it? (in target 'React-RCTFabric' from project 'Pods')
[React-RCTFabric] Compiling RCTTextInputComponentView.mm
⚠️ Run script build phase 'Bundle React Native code and images' will be run during every build
because it does not specify any outputs. To address this warning, either add output dependencies
to the script phase, or configure it to run in every build by unchecking "Based on dependency analysis"
 in the script phase. (in target 'StatusIm' from project 'StatusIm')
```

This gets fixed with :
- `make xcode-clean`
- `make clean`

However it is frustrating how often this happens now after upgrading to react-native 0.73 🥲

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -32,8 +32,8 @@ abstract_target 'Status' do
 
   use_react_native!(
     :path => config[:reactNativePath],
-    :hermes_enabled => false,
     :fabric_enabled => flags[:fabric_enabled],
+    :hermes_enabled => false,
     # An absolute path to your application root.
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
@@ -63,6 +63,21 @@ abstract_target 'Status' do
   end
 
   post_install do |installer|
+    # as per react-native 0.73.2 template
+    # https://github.com/facebook/react-native/blob/c5c0563f209ead8f884204763e02115bd66d1960/packages/react-native/template/ios/Podfile#L49-L52
+    react_native_post_install(
+      installer,
+      config[:reactNativePath],
+      :mac_catalyst_enabled => false,
+    )
+    # fix code signing error on dependencies
+    installer.pods_project.targets.each do |target|
+      if target.respond_to?(:product_type) and target.product_type == "com.apple.product-type.bundle"
+        target.build_configurations.each do |config|
+            config.build_settings['CODE_SIGNING_ALLOWED'] = 'NO'
+        end
+      end
+    end
     # some of libs wouldn't be build for x86_64 otherwise and that is
     # necessary for ios simulators
     installer.pods_project.targets.each do |target|
