--- a/android/build.gradle
+++ b/android/build.gradle
@@ -15,6 +15,8 @@ ext {
     supportLibVersion   = project.supportLibVersion
     gradlePluginVersion = project.gradlePluginVersion
     kotlinVersion       = project.kotlinPluginVersion
+    kotlinPluginVersion = project.kotlinPluginVersion
+    kotlinToolsVersion  = project.kotlinPluginVersion
     ndkVersion = "25.2.9519653"
 }
 
@@ -28,6 +30,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${project.ext.kotlinPluginVersion}"
         classpath("com.android.tools.build:gradle")
         classpath("com.facebook.react:react-native-gradle-plugin")
+        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin")
     }
 }
 
@@ -45,6 +48,8 @@ subprojects {
         }
     }
 }
+
+apply plugin: "com.facebook.react.rootproject"
 
 allprojects {
     beforeEvaluate {
