--- a/package.json
+++ b/package.json
@@ -11,15 +11,14 @@
     "@babel/preset-typescript": "^7.17.12",
     "@react-native-async-storage/async-storage": "1.19.3",
     "@react-native-camera-roll/camera-roll": "git+https://github.com/status-im/react-native-camera-roll.git#refs/tags/v5.1.1.1",
+    "@react-native-clipboard/clipboard": "1.13.2",
     "@react-native-community/audio-toolkit": "git+https://github.com/tbenr/react-native-audio-toolkit.git#refs/tags/v2.0.3-status-v6",
     "@react-native-community/blur": "git+https://github.com/status-im/react-native-blur.git#refs/tags/v4.3.3-status",
-    "@react-native-community/clipboard": "^1.2.2",
     "@react-native-community/hooks": "^3.0.0",
     "@react-native-community/masked-view": "^0.1.6",
     "@react-native-community/netinfo": "^4.4.0",
     "@react-native-community/push-notification-ios": "^1.4.1",
     "@react-native-community/slider": "^3.0.0",
-    "@react-native/metro-config": "^0.72.9",
     "base-64": "^1.0.0",
     "bignumber.js": "git+https://github.com/status-im/bignumber.js.git#refs/tags/v4.0.2-status",
     "chance": "^1.1.0",
@@ -33,20 +32,20 @@
     "node-libs-react-native": "^1.2.1",
     "react": "18.2.0",
     "react-dom": "18.0.0",
-    "react-native": "0.72.5",
+    "react-native": "0.73.4",
     "react-native-background-timer": "^2.1.1",
     "react-native-biometrics": "^3.0.1",
     "react-native-blob-util": "^0.13.18",
     "react-native-camera-kit": "14.0.0-beta13",
     "react-native-config": "^1.5.0",
-    "react-native-dialogs": "^1.0.4",
+    "react-native-dialogs": "1.1.2",
     "react-native-draggable-flatlist": "4.0.1",
     "react-native-fast-image": "^8.5.11",
     "react-native-fs": "^2.14.1",
-    "react-native-gesture-handler": "2.6.1",
+    "react-native-gesture-handler": "2.14.1",
     "react-native-gifted-charts": "^1.3.2",
     "react-native-haptic-feedback": "^1.9.0",
-    "react-native-hole-view": "3.0.0-alpha3",
+    "react-native-hole-view": "^3.0.0-alpha4",
     "react-native-image-crop-picker": "0.40.0",
     "react-native-image-resizer": "^1.2.3",
     "react-native-image-viewing": "git+https://github.com/status-im/react-native-image-viewing.git#refs/tags/v0.2.1.status",
@@ -55,7 +54,7 @@
     "react-native-linear-gradient": "^2.8.0",
     "react-native-lottie-splash-screen": "^1.0.1",
     "react-native-mail": "git+https://github.com/status-im/react-native-mail.git#refs/tags/v6.1.2-status",
-    "react-native-navigation": "7.37.0",
+    "react-native-navigation": "7.37.2",
     "react-native-orientation-locker": "^1.5.0",
     "react-native-permissions": "3.8.0",
     "react-native-randombytes": "^3.6.1",
@@ -82,18 +81,21 @@
     "@babel/register": "7.0.0",
     "@jest/globals": "^25.1.0",
     "@mapbox/node-pre-gyp": "^1.0.9",
+    "@react-native/babel-preset": "0.73.21",
+    "@react-native/codegen": "0.73.2",
+    "@react-native/gradle-plugin": "0.73.4",
+    "@react-native/metro-config": "0.73.5",
     "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react-native": "^12.4.2",
     "@tsconfig/react-native": "^3.0.0",
     "@types/jest": "^28.1.6",
-    "@types/react": "^18.0.24",
+    "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
-    "babel-jest": "^29.7.0",
+    "babel-jest": "^29.6.3",
     "concurrently": "^7.6.0",
     "jest": "^29.7.0",
     "jest-image-snapshot": "^5.1.0",
     "jest-silent-reporter": "^0.5.0",
-    "metro-react-native-babel-preset": "0.76.8",
     "nodemon": "^2.0.16",
     "nyc": "^14.1.1",
     "prettier": "^2.8.8",
@@ -102,12 +104,6 @@
     "rn-snoopy": "git+https://github.com/status-im/rn-snoopy.git#refs/tags/v2.0.2-status",
     "shadow-cljs": "2.26.2"
   },
-  "resolutions": {
-    "_comment": "This prevents random metro crashes till we upgrade to react-native 0.73.x",
-    "metro": "^0.79.1",
-    "metro-config": "^0.79.1",
-    "metro-core": "^0.79.1"
-  },
   "binary": {
     "module_name": "status_nodejs_addon",
     "module_path": "./lib/binding/",
@@ -115,6 +111,6 @@
     "remote_path": "{version}"
   },
   "engines": {
-    "node": ">=16"
+    "node": ">=18"
   }
 }
