--- a/ios/Podfile
+++ b/ios/Podfile
@@ -32,8 +32,8 @@ abstract_target 'Status' do
 
   use_react_native!(
     :path => config[:reactNativePath],
-    :hermes_enabled => false,
     :fabric_enabled => flags[:fabric_enabled],
+    :hermes_enabled => false,
     # An absolute path to your application root.
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
@@ -63,15 +63,18 @@ abstract_target 'Status' do
   end
 
   post_install do |installer|
+    # as per react-native 0.73.2 template
+    # https://github.com/facebook/react-native/blob/c5c0563f209ead8f884204763e02115bd66d1960/packages/react-native/template/ios/Podfile#L49-L52
+    react_native_post_install(
+      installer,
+      config[:reactNativePath],
+      :mac_catalyst_enabled => false,
+    )
     # some of libs wouldn't be build for x86_64 otherwise and that is
     # necessary for ios simulators
     installer.pods_project.targets.each do |target|
       target.build_configurations.each do |config|
         config.build_settings['ONLY_ACTIVE_ARCH'] = 'NO'
-        # fix for no template named 'unary_function' in namespace 'std'; did you mean '__unary_function'?
-        # ref : https://github.com/facebook/react-native/issues/37748
-        # TODO : remove after upgrading to react-native 0.72.x
-        config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= ['$(inherited)', '_LIBCPP_ENABLE_CXX17_REMOVED_UNARY_BINARY_FUNCTION']
       end
       # We need to remove the predefinition of IPHONEOS_DEPLOYMENT_TARGET from RNCK lib to use our own.
       case target.name
