--- a/.zprintrc
+++ b/.zprintrc
@@ -22,34 +22,37 @@
   :multi-lhs-hang]
 
  :fn-map
- {"reg-sub"         :arg1-pair
-  "h/describe"      :arg1-body
-  "h/describe-skip" :arg1-body
-  "h/describe-only" :arg1-body
-  "h/test"          :arg1-body
-  "h/test-skip"     :arg1-body
-  "h/test-only"     :arg1-body
-  "global.describe" :arg1-body
-  "global.test"     :arg1-body
-  "list-comp"       :binding
-  "defview"         :arg1-body
-  "letsubs"         :binding
-  "with-let"        "let"
-  "reg-event-fx"    :arg1-pair
-  "reg-fx"          :arg1-pair
-  "testing"         :arg1-body
-  "deftest-sub"     :arg1-body
-  "wait-for"        :arg1-body
-  "with-deps-check" :arg1-body
-  "schema/=>"       :arg1-body
-  "->"              [:noarg1-body
-                     {:list               {:constant-pair? false :force-nl? false}
-                      :next-inner-restore [[:list :constant-pair?]]}]
-  "set!"            "reset!"
-  "assoc-when"      "assoc"
-  "assoc-some"      "assoc"
-  "conj-when"       "conj"
-  "conj-some"       "conj"}
+ {"reg-sub"            :arg1-pair
+  "h/describe"         :arg1-body
+  "h/describe-skip"    :arg1-body
+  "h/describe-only"    :arg1-body
+  "h/test"             :arg1-body
+  "h/test-skip"        :arg1-body
+  "h/test-only"        :arg1-body
+  "test/async"         :arg1-body
+  "test/use-fixtures"  :arg1-body
+  "global.describe"    :arg1-body
+  "global.test"        :arg1-body
+  "list-comp"          :binding
+  "defview"            :arg1-body
+  "letsubs"            :binding
+  "with-let"           "let"
+  "reg-event-fx"       :arg1-pair
+  "reg-fx"             :arg1-pair
+  "testing"            :arg1-body
+  "deftest-sub"        :arg1-body
+  "h/integration-test" :arg1-body
+  "wait-for"           :arg1-body
+  "with-deps-check"    :arg1-body
+  "schema/=>"          :arg1-body
+  "->"                 [:noarg1-body
+                        {:list               {:constant-pair? false :force-nl? false}
+                         :next-inner-restore [[:list :constant-pair?]]}]
+  "set!"               "reset!"
+  "assoc-when"         "assoc"
+  "assoc-some"         "assoc"
+  "conj-when"          "conj"
+  "conj-some"          "conj"}
 
  :style-map
  {:no-comma {:map {:comma? false}}
