--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-native-permissions": "3.8.0",
     "react-native-reanimated": "3.6.1",
     "react-native-redash": "18.1.0",
+    "react-native-shadow-2": "^7.0.8",
     "react-native-shake": "^3.3.1",
     "react-native-share": "10.0.2",
     "react-native-static-safe-area-insets": "^2.2.0",
