--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -43,7 +43,7 @@ ANDROID_ABI_SPLIT=false
 # Some platforms are excluded though
 ANDROID_ABI_INCLUDE=armeabi-v7a;arm64-v8a;x86;x86_64
 
-org.gradle.jvmargs=-Xmx8704M
+org.gradle.jvmargs=-Xmx8704M -XX:+UseParallelGC
 
 versionCode=9999
 commitHash=unknown
