[Feature] Enable Test Networks by default on Dev, E2E and PR builds
https://github.com/status-im/status-go/compare/894eb575...158bd70c

Signed-off-by: Mohamed Javid <19339952+smohamedjavid@users.noreply.github.com>

--- a/.env.nightly
+++ b/.env.nightly
@@ -22,3 +22,4 @@ COMMUNITIES_ENABLED=1
 DATABASE_MANAGEMENT_ENABLED=1
 DELETE_MESSAGE_ENABLED=1
 FAST_CREATE_COMMUNITY_ENABLED=0
+TEST_NETWORKS_ENABLED=0
