--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "preinstall": "scripts/check-nix-shell.sh && make status-go-library"
   },
   "dependencies": {
-    "@babel/preset-typescript": "^7.17.12",
     "@react-native-async-storage/async-storage": "1.19.3",
     "@react-native-camera-roll/camera-roll": "git+https://github.com/status-im/react-native-camera-roll.git#refs/tags/v5.1.1.1",
     "@react-native-clipboard/clipboard": "1.13.2",
@@ -22,7 +21,6 @@
     "base-64": "^1.0.0",
     "bignumber.js": "git+https://github.com/status-im/bignumber.js.git#refs/tags/v4.0.2-status",
     "chance": "^1.1.0",
-    "create-react-class": "^15.6.2",
     "emojilib": "^2.4.0",
     "eth-phishing-detect": "^1.2.0",
     "form-data": "^4.0.0",
@@ -44,20 +42,16 @@
     "react-native-fs": "^2.14.1",
     "react-native-gesture-handler": "2.14.1",
     "react-native-gifted-charts": "^1.3.2",
-    "react-native-haptic-feedback": "^1.9.0",
     "react-native-hole-view": "^3.0.0-alpha4",
     "react-native-image-crop-picker": "0.40.0",
     "react-native-image-resizer": "^1.2.3",
-    "react-native-image-viewing": "git+https://github.com/status-im/react-native-image-viewing.git#refs/tags/v0.2.1.status",
     "react-native-keychain": "8.1.2",
-    "react-native-languages": "^3.0.2",
     "react-native-linear-gradient": "^2.8.0",
     "react-native-lottie-splash-screen": "^1.0.1",
     "react-native-mail": "git+https://github.com/status-im/react-native-mail.git#refs/tags/v6.1.2-status",
     "react-native-navigation": "7.38.3",
     "react-native-orientation-locker": "^1.5.0",
     "react-native-permissions": "3.8.0",
-    "react-native-randombytes": "^3.6.1",
     "react-native-reanimated": "3.6.1",
     "react-native-redash": "18.1.0",
     "react-native-shake": "^3.3.1",
@@ -67,9 +61,7 @@
     "react-native-svg": "13.10.0",
     "react-native-transparent-video": "git+https://github.com/status-im/react-native-transparent-video.git#refs/tags/0.1.1",
     "react-native-webview": "13.6.3",
-    "react-syntax-highlighter": "^15.5.0",
-    "rn-emoji-keyboard": "0.7.0",
-    "tdigest": "^0.1.1"
+    "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
