--- a/.env
+++ b/.env
@@ -35,3 +35,4 @@ LOCAL_PAIRING_ENABLED=1
 TEST_STATEOFUS=1
 FAST_CREATE_COMMUNITY_ENABLED=1
 TEST_NETWORKS_ENABLED=1
+SHOW_NOT_IMPLEMENTED_SETTINGS=1
