--- a/.env.e2e
+++ b/.env.e2e
@@ -34,3 +34,4 @@ STICKERS_TEST_ENABLED=1
 LOCAL_PAIRING_ENABLED=1
 FAST_CREATE_COMMUNITY_ENABLED=1
 TEST_NETWORKS_ENABLED=1
+SHOW_NOT_IMPLEMENTED_SETTINGS=1
