--- a/.env.e2e
+++ b/.env.e2e
@@ -35,3 +35,5 @@ LOCAL_PAIRING_ENABLED=1
 FAST_CREATE_COMMUNITY_ENABLED=1
 TEST_NETWORKS_ENABLED=1
 SHOW_NOT_IMPLEMENTED_FEATURES=1
+DELETE_MESSAGE_FOR_ME_UNDO_TIME_LIMIT=10000
+DELETE_MESSAGE_UNDO_TIME_LIMIT=10000
