--- a/ios/Podfile
+++ b/ios/Podfile
@@ -5,7 +5,7 @@ require Pod::Executable.execute_command('node', ['-p',
     {paths: [process.argv[1]]},
   )', __dir__]).strip
 
-platform :ios, min_ios_version_supported
+platform :ios, 13.0
 prepare_react_native_project!
 
 linkage = ENV['USE_FRAMEWORKS']
@@ -67,6 +67,7 @@ abstract_target 'Status' do
     # necessary for ios simulators
     installer.pods_project.targets.each do |target|
       target.build_configurations.each do |config|
+        config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '13.0'
         config.build_settings['ONLY_ACTIVE_ARCH'] = 'NO'
         # fix for no template named 'unary_function' in namespace 'std'; did you mean '__unary_function'?
         # ref : https://github.com/facebook/react-native/issues/37748
