--- a/ios/Podfile
+++ b/ios/Podfile
@@ -48,7 +48,7 @@ abstract_target 'Status' do
   use_react_native!(
     :path => config[:reactNativePath],
     :fabric_enabled => flags[:fabric_enabled],
-    :hermes_enabled => false,
+    :hermes_enabled => true,
     # An absolute path to your application root.
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
