chore: add wallet connect library
Signed-off-by: Brian Sztamfater <brian@status.im>

--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "preinstall": "scripts/check-nix-shell.sh && make status-go-library"
   },
   "dependencies": {
+    "@ethersproject/shims": "^5.7.0",
+    "@json-rpc-tools/utils": "^1.7.6",
     "@react-native-async-storage/async-storage": "1.19.3",
     "@react-native-camera-roll/camera-roll": "7.5.2",
     "@react-native-clipboard/clipboard": "1.13.2",
@@ -18,11 +20,15 @@
     "@react-native-community/netinfo": "^4.4.0",
     "@react-native-community/push-notification-ios": "^1.4.1",
     "@react-native-community/slider": "^3.0.0",
+    "@walletconnect/react-native-compat": "^2.12.2",
+    "@walletconnect/web3wallet": "^1.11.2",
     "base-64": "^1.0.0",
     "bignumber.js": "git+https://github.com/status-im/bignumber.js.git#refs/tags/v4.0.2-status",
     "chance": "^1.1.0",
     "emojilib": "^2.4.0",
     "eth-phishing-detect": "^1.2.0",
+    "ethers": "5.7.2",
+    "fast-text-encoding": "^1.0.6",
     "form-data": "^4.0.0",
     "functional-red-black-tree": "^1.0.1",
     "i18n-js": "^3.3.0",
@@ -41,6 +47,7 @@
     "react-native-fast-image": "^8.5.11",
     "react-native-fs": "^2.14.1",
     "react-native-gesture-handler": "2.14.1",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-gifted-charts": "^1.3.2",
     "react-native-hole-view": "^3.0.0-alpha4",
     "react-native-image-crop-picker": "0.40.0",
