--- a/.env.jenkins
+++ b/.env.jenkins
@@ -37,3 +37,4 @@ LOCAL_PAIRING_ENABLED=1
 FAST_CREATE_COMMUNITY_ENABLED=1
 TEST_NETWORKS_ENABLED=1
 SHOW_NOT_IMPLEMENTED_FEATURES=1
+ENABLE_ALERT_BANNER=1
