--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@react-native-async-storage/async-storage": "^1.17.9",
     "@react-native-community/audio-toolkit": "git+https://github.com/tbenr/react-native-audio-toolkit.git#refs/tags/v2.0.3-status-v6",
     "@react-native-community/blur": "git+https://github.com/Kureev/react-native-blur#refs/tags/v3.6.1",
-    "@react-native-community/cameraroll": "git+https://github.com/status-im/react-native-cameraroll.git#refs/tags/v4.0.4-status.0",
+    "@react-native-community/cameraroll": "git+https://github.com/status-im/react-native-cameraroll.git#refs/tags/v4.0.4-status.1_1",
     "@react-native-community/clipboard": "^1.2.2",
     "@react-native-community/hooks": "^2.5.1",
     "@react-native-community/masked-view": "^0.1.6",
@@ -59,7 +59,7 @@
     "react-native-linear-gradient": "^2.5.6",
     "react-native-lottie-splash-screen": "^1.0.1",
     "react-native-mail": "^6.1.1",
-    "react-native-navigation": "^7.27.1",
+    "react-native-navigation": "^7.36.0",
     "react-native-permissions": "^2.1.5",
     "react-native-randombytes": "^3.6.1",
     "react-native-reanimated": "2.3.3",
@@ -70,7 +70,7 @@
     "react-native-status-keycard": "git+https://github.com/status-im/react-native-status-keycard.git#refs/tags/v2.5.39",
     "react-native-svg": "^9.8.4",
     "react-native-touch-id": "^4.4.1",
-    "react-native-webview": "git+https://github.com/status-im/react-native-webview.git#refs/tags/v11.16.0-status",
+    "react-native-webview": "git+https://github.com/status-im/react-native-webview.git#refs/tags/android-13-fix_4",
     "rn-emoji-keyboard": "git+https://github.com/status-im/rn-emoji-keyboard.git#refs/tags/v0.4.3",
     "tdigest": "^0.1.1",
     "web3-utils": "^1.2.1"
