--- a/.env.e2e
+++ b/.env.e2e
@@ -38,3 +38,4 @@ SHOW_NOT_IMPLEMENTED_FEATURES=1
 DELETE_MESSAGE_FOR_ME_UNDO_TIME_LIMIT=10000
 DELETE_MESSAGE_UNDO_TIME_LIMIT=10000
 ENABLE_ALERT_BANNER=0
+ENABLE_JUMP_TO=1
