--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -70,8 +70,30 @@
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
+                <!-- Handles http and https URLs for status.app -->
                 <data android:scheme="http" android:host="status.app" />
                 <data android:scheme="https" android:host="status.app" />
+                <!-- Community paths -->
+                <data android:pathPattern="/c/.*" android:host="status.app" android:scheme="http" />
+                <data android:pathPattern="/c/.*" android:host="status.app" android:scheme="https" />
+                <!-- Community channel paths -->
+                <data android:pathPattern="/cc/.*" android:host="status.app" android:scheme="http" />
+                <data android:pathPattern="/cc/.*" android:host="status.app" android:scheme="https" />
+                <!-- User paths -->
+                <data android:pathPattern="/u/.*" android:host="status.app" android:scheme="http" />
+                <data android:pathPattern="/u/.*" android:host="status.app" android:scheme="https" />
+                <!-- Private chat paths -->
+                <data android:pathPattern="/p/.*" android:host="status.app" android:scheme="http" />
+                <data android:pathPattern="/p/.*" android:host="status.app" android:scheme="https" />
+                <!-- Community request paths -->
+                <data android:pathPattern="/cr/.*" android:host="status.app" android:scheme="http" />
+                <data android:pathPattern="/cr/.*" android:host="status.app" android:scheme="https" />
+                <!-- Group chat paths -->
+                <data android:pathPattern="/g/.*" android:host="status.app" android:scheme="http" />
+                <data android:pathPattern="/g/.*" android:host="status.app" android:scheme="https" />
+                <!-- Wallet paths -->
+                <data android:pathPattern="/wallet/.*" android:host="status.app" android:scheme="http" />
+                <data android:pathPattern="/wallet/.*" android:host="status.app" android:scheme="https" />
             </intent-filter>
             <intent-filter android:autoVerify="true">
                 <action android:name="android.intent.action.VIEW" />
