--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "@react-native-community/netinfo": "^4.4.0",
     "@react-native-community/push-notification-ios": "^1.4.1",
     "@react-native-community/slider": "^3.0.0",
-    "@walletconnect/react-native-compat": "^2.12.2",
-    "@walletconnect/web3wallet": "^1.11.2",
+    "@walletconnect/react-native-compat": "2.11.2",
+    "@walletconnect/web3wallet": "1.10.2",
     "base-64": "^1.0.0",
+    "big-integer": "1.6.51",
     "bignumber.js": "git+https://github.com/status-im/bignumber.js.git#refs/tags/v4.0.2-status",
     "chance": "^1.1.0",
     "emojilib": "^2.4.0",
