--- a/package.json
+++ b/package.json
@@ -97,7 +97,8 @@
     "jest-silent-reporter": "^0.5.0",
     "nodemon": "^2.0.16",
     "nyc": "^14.1.1",
-    "prettier": "^2.8.8",
+    "prettier": "^3.3.3",
+    "prettier-plugin-sort-json": "^4.0.0",
     "process": "0.11.10",
     "react-test-renderer": "18.1.0",
     "shadow-cljs": "2.26.2",
