feat: removed wallet connect feature flag

--- a/.env.jenkins
+++ b/.env.jenkins
@@ -36,3 +36,4 @@ LOCAL_PAIRING_ENABLED=1
 FAST_CREATE_COMMUNITY_ENABLED=1
 TEST_NETWORKS_ENABLED=1
 ENABLE_ALERT_BANNER=1
+FLAG_WALLET_CONNECT_ENABLED=1
