--- a/.env
+++ b/.env
@@ -35,3 +35,4 @@ FAST_CREATE_COMMUNITY_ENABLED=1
 TEST_NETWORKS_ENABLED=1
 SHOW_NOT_IMPLEMENTED_FEATURES=0
 ENABLE_ALERT_BANNER=0
+FLAG_WALLET_CONNECT_ENABLED=1
