--- a/.env.release
+++ b/.env.release
@@ -19,3 +19,4 @@ MAX_IMAGES_BATCH=1
 DELETE_MESSAGE_ENABLED=1
 FAST_CREATE_COMMUNITY_ENABLED=0
 TEST_NETWORKS_ENABLED=0
+FLAG_WALLET_CONNECT_ENABLED=1
