--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -36,6 +36,7 @@
             android:allowBackup="false"
             android:label="@string/app_name"
             android:icon="@mipmap/ic_launcher"
+            android:roundIcon="@mipmap/ic_launcher_round"
             android:theme="@style/Theme.AppSplash"
             android:name=".MainApplication"
             android:largeHeap="true"
